[package]
name = "linkmobility"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for integrating with linkmobility for sending SMS."
repository = "https://github.com/third-act/linkmobility/"

[dependencies]
serde_json = "1.0.94"
serde = { version = "1.0.152", features = [ "derive" ] }
reqwest = { version = "0.11.14", features = [ "json", "blocking" ] }
tokio = { version = "1.25.0", features = ["full"] }
